[gd_scene load_steps=4 format=2]

[ext_resource path="res://Weapons/Laser.png" type="Texture" id=1]
[ext_resource path="res://Weapons/Laser.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 18.0

[node name="Laser" type="Area2D"]
collision_layer = 8
collision_mask = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Laser_area_entered"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
